# nix-templates

./: LICENSE  README.md  flake.nix
python/poetry/: .gitignore  flake.nix  pyproject.toml
rust/bevy/: Cargo.toml  flake.nix  init.sh
rust/bevy/assets/: lighthouse.glb
rust/bevy/src/: main.rs
rust/cargo2nix/: .envrc  .gitignore  Cargo.toml  flake.nix  init.sh
rust/naersk/: .gitignore  Cargo.toml  flake.nix
rust/naersk-nightly/: Cargo.toml  flake.nix
