[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { package = "bevy", version = "0.10.1"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking"]